Added healing ritual. Rewrite check up for items in ritual handler. Added message for commands (setmana)

--- a/resources/lang/en_US.yml
+++ b/resources/lang/en_US.yml
@@ -38,6 +38,7 @@ msg_ymptpr: "You must perform the previous ritual"
 msg_rac: " - Reloading all configurations"
 msg_smmfp: " - set max mana for player"
 msg_scmfp: " - set current mana for player"
+msg_s: "Seted"
 msg_n: "Need: "
 rb_sa: "MagickScrolls"
 rb_st: "Rituals"
@@ -55,6 +56,9 @@ rb_needC: "\n§11 Blaze powder\n§11 Iron ingot\n§11 Flint\n§11 Glowstone dust
 rb_titleMUS: "§5Mana up Ritual II"
 rb_DescriptionMUS: "\nIncrease your mana much more."
 rb_needMUS: "\n§11 Diamond\n§11 Nether star\n§11 Gold block\n§11 Glowstone"
+rb_titleH: "§5Healing Ritual"
+rb_DescriptionH: "\nHeal you and remove all potion effects. Also regenerate your mana"
+rb_needH: "\n§11 Diamond\n§11 Speckled melon\n§11 Glowstone dust\n§11 Rotten flesh"
 s_ti: "Trap Item"
 
 
