Added rituals (Diver, Miner, Traveler, Warrior). Rewrited CDSystem method (CDStats) to overloaded methods. Rewrited method camExec. Added CD to new rituals. Fixed bug result of ritual not canceled

--- a/resources/lang/en_US.yml
+++ b/resources/lang/en_US.yml
@@ -57,8 +57,20 @@ rb_titleMUS: "§5Mana up Ritual II"
 rb_DescriptionMUS: "\nIncrease your mana much more."
 rb_needMUS: "\n§11 Diamond\n§11 Nether star\n§11 Gold block\n§11 Glowstone"
 rb_titleH: "§5Healing Ritual"
-rb_DescriptionH: "\nHeal you and remove all potion effects. Also regenerate your mana"
+rb_DescriptionH: "\nHeal you and remove all potion effects. Also regenerate your mana."
 rb_needH: "\n§11 Diamond\n§11 Speckled melon\n§11 Glowstone dust\n§11 Rotten flesh"
+rb_titleD: "§5Diver Ritual"
+rb_DescriptionD: "\nGives you potion effects for effectively diving."
+rb_needD: "\n§11 Gold ingot\n§11 Pufferfish\n§11 Glowstone\n§11 Sugar"
+rb_titleM: "§5Miner Ritual"
+rb_DescriptionM: "\nGives you potion effects for effectively digging mines."
+rb_needM: "\n§11 Gold block\n§11 Magma cream\n§11 Glowstone dust\n§11 Sugar"
+rb_titleT: "§5Traveler Ritual"
+rb_DescriptionT: "\nGives you potion effects for effectively traveling."
+rb_needT: "\n§11 Fermented spider §1eye\n§11 Ghast tear\n§11 Emerald\n§11 Sugar"
+rb_titleW: "§5Warrior Ritual"
+rb_DescriptionW: "\nGives you potion effects for effectively fighting."
+rb_needW: "\n§11 Diamond\n§11 Ghast tear\n§11 Glowstone\n§11 Blaze rod"
 s_ti: "Trap Item"
 
 
