Fixed: command (reload) do not reloaded ritual book

--- a/resources/lang/en_US.yml
+++ b/resources/lang/en_US.yml
@@ -45,31 +45,31 @@ rb_sa: "MagickScrolls"
 rb_st: "Rituals"
 rb_s: "\n\nSelect Ritual"
 rb_sh: "click to select"
-rb_titleMUF: "§5Mana up Ritual I"
+rb_titleMUF: "§5§lMana up Ritual I"
 rb_DescriptionMUF: "\nIncrease your mana!"
 rb_needMUF: "\n§11 Diamond\n§11 Iron block\n§11 Gold ingot\n§11 Redstone"
-rb_titleVC: "§5Villager Cast"
+rb_titleVC: "§5§lVillager Cast"
 rb_DescriptionVC: "\nSummon up the Villager."
 rb_needVC: "\n§11 Bone\n§11 Iron block\n§11 Emerald\n§11 Golden apple"
-rb_titleC: "§5Cooking"
+rb_titleC: "§5§lCooking"
 rb_DescriptionC: "\nCook faster. \nSome food may be overcooked."
 rb_needC: "\n§11 Blaze powder\n§11 Iron ingot\n§11 Flint\n§11 Glowstone dust"
-rb_titleMUS: "§5Mana up Ritual II"
+rb_titleMUS: "§5§lMana up Ritual II"
 rb_DescriptionMUS: "\nIncrease your mana much more."
 rb_needMUS: "\n§11 Diamond\n§11 Nether star\n§11 Gold block\n§11 Glowstone"
-rb_titleH: "§5Healing Ritual"
+rb_titleH: "§5§lHealing Ritual"
 rb_DescriptionH: "\nHeal you and remove all potion effects. Also regenerate your mana."
 rb_needH: "\n§11 Diamond\n§11 Speckled melon\n§11 Glowstone dust\n§11 Rotten flesh"
-rb_titleD: "§5Diver Ritual"
+rb_titleD: "§5§lDiver Ritual"
 rb_DescriptionD: "\nGives you potion effects for effectively diving."
 rb_needD: "\n§11 Gold ingot\n§11 Pufferfish\n§11 Glowstone\n§11 Sugar"
-rb_titleM: "§5Miner Ritual"
+rb_titleM: "§5§lMiner Ritual"
 rb_DescriptionM: "\nGives you potion effects for effectively digging mines."
 rb_needM: "\n§11 Gold block\n§11 Magma cream\n§11 Glowstone dust\n§11 Sugar"
-rb_titleT: "§5Traveler Ritual"
+rb_titleT: "§5§lTraveler Ritual"
 rb_DescriptionT: "\nGives you potion effects for effectively traveling."
 rb_needT: "\n§11 Fermented spider §1eye\n§11 Ghast tear\n§11 Emerald\n§11 Sugar"
-rb_titleW: "§5Warrior Ritual"
+rb_titleW: "§5§lWarrior Ritual"
 rb_DescriptionW: "\nGives you potion effects for effectively fighting."
 rb_needW: "\n§11 Diamond\n§11 Ghast tear\n§11 Glowstone\n§11 Blaze rod"
 s_ti: "Trap Item"
