Change in you don't have mana msg first letter to big

--- a/resources/lang/en_US.yml
+++ b/resources/lang/en_US.yml
@@ -16,7 +16,7 @@ msg_giap: " - Getting info about player"
 msg_tp: " - This page"
 msg_pnf: "Player file not found"
 msg_pdne: "Player doesn't exist"
-msg_ydnhm: "you don't have mana "
+msg_ydnhm: "You don't have mana "
 msg_ycutsa: "You can use this scroll after "
 msg_seconds: "seconds"
 msg_nmay: "No mobs around you"
