Fixed lang incorrect words. Fixed infinity x in confusing. Fixed incorrect equals in cauldron crafts. Added rituals Cd in command

--- a/resources/lang/en_US.yml
+++ b/resources/lang/en_US.yml
@@ -1,10 +1,10 @@
 #Messages
 msg_ydhp: "You don't have permission"
 msg_pino: "Player isn't online"
-msg_sasdne: "Such a scroll doesn't exist"
+msg_sasdne: "The selected cd does not exist"
 msg_tshba: "The scroll has been added"
 msg_minf: "Mana is now full"
-msg_cdwst: "CD was set to "
+msg_cdwst: " CD was set to "
 msg_iap: "Info about player: "
 msg_m: "Mana: "
 msg_cdsl: "CDs list: "
@@ -17,7 +17,7 @@ msg_tp: " - This page"
 msg_pnf: "Player file not found"
 msg_pdne: "Player doesn't exist"
 msg_ydnhm: "You don't have mana "
-msg_ycutsa: "You can use this scroll after "
+msg_ycutsa: "You can use this after "
 msg_seconds: "seconds"
 msg_nmay: "No mobs around you"
 msg_yctt: "You cannot teleport there"
