Added Magic to MStypes

--- a/resources/lang/en_US.yml
+++ b/resources/lang/en_US.yml
@@ -27,7 +27,7 @@ msg_los: " - List of scrolls"
 msg_rin: "Ritual is null"
 msg_rins: "Ritual is not selected"
 msg_yhamw: "You have a maximum witches"
-msg_wha: "Witch has added"
+msg_wha: "A witch has been added to your coven"
 msg_wnor: "Wrong name of ritual"
 msg_ira: "Incorrect ritual altar"
 msg_nitr: "No items to ritual"
